syntax = "proto3";

package auth;

option go_package = "github.com/apriliantocecep/auth-service-gabungin/pkg/pb";

service AuthService {
    rpc Register (RegisterRequest) returns (RegisterResponse);
    rpc Login (LoginRequest) returns (LoginResponse);
    rpc Validate (ValidateRequest) returns (ValidateResponse);
}

message RegisterRequest {
    string email = 1;
    string password = 2;
    string first_name = 3;
    string last_name = 4;
    string gender = 5;
}

message RegisterResponse {
    int64 status = 1;
    string error = 2;
}

message LoginRequest {
    string email = 1;
    string password = 2;
}
  
message LoginResponse {
    int64 status = 1;
    string error = 2;
    string token = 3;
}

message ValidateRequest {
    string token = 1;
}

message ValidateResponse {
    int64 status = 1;
    string error = 2;
    int64 userId = 3;
}